--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -149,7 +149,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/keyboard.jpg) no-repeat bottom center scroll;
+    background: url(../img/macbook.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
